# banana-mcp

./: .gitignore  CHANGELOG.md  Makefile  README.md  SKILL.md  pyproject.toml  server.py
src/banana_mcp/: __init__.py  server.py
