[project]
name = "banana-mcp"
version = "1.0.0"
description = "MCP server for AI image and text generation via Google Gemini"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eric Uehling" }]
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.16.0",
    "mcp>=1.9.0",
]

[project.scripts]
banana-mcp = "banana_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banana_mcp"]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
